# hako-web

./: .gitattributes  .gitignore  LICENSE  README.md  global.css  index.html  jsconfig.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js
components/common/: navbar.html
components/profile/: manga-list.html  media-list.html  overview.html
data/media/: anime-backup.json  anime.json
plans/: migration-audit-and-next-steps.md
profile/: indexOld.html  index_original.html  profile.html
public/: ai.txt  robots.txt  site.webmanifest
public/profile/: indexOld.html  index_backup.html
public/views/: 404.html  landing.html  profile.html
scripts/core/: loadComponent.js  populateFeed.js
scripts/features/: taste.js
scripts/utils/: quickEditor.js  toneCalc.js
src/: App.svelte  env.d.ts  main.js  main.ts  routes.ts
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs  vibe_schema.json
src/components/: FavoritesGrid.svelte  Footer.svelte  GlobalQuickUpdateDrawer.svelte  LoginModal.svelte  MediaList.svelte  Navbar.svelte  ProfileOverview.svelte  QuickEditorModal.svelte  QuickUpdateOverlay.svelte  SearchOverlay.svelte  SignupModal.svelte  TermsOfService.svelte
src/core/: auth.js  auth.ts  cache.ts  index.ts  keys.svelte.ts  router.js  settings.svelte.ts  ui.svelte.js  ui.svelte.ts  wasm-init.ts
src/features/: favorites.js  populateFeed.js  profile.js  taste.js
src/services/: activityOrchestrator.ts  activityService.js  activityService.ts  commentService.ts  favoritesService.ts  (+10 more)
views/: feed.html
(+175 files in other folders)
