[package]
name = "hako-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
fuzzy-matcher = "0.3"
lazy_static = "1.4"
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
